# im

./: CMakeLists.txt  def.sql
client/: CMakeLists.txt  client.cpp  imclient
client/common/async/: asiotimer.cpp  asiotimer.h
client/common/network/: networkbase.h
client/common/threading/: threadpool.cpp  threadpool.h
client/src/: client.cpp  client.h  eventloop.cpp  msgmanager.cpp  msgmanager.h
client/test/: testAck.cpp  testAckMsg.cpp
qt/Client/: CMakeLists.txt  client.cpp  login.cpp  main.cpp  msgmanager.cpp  msgmanager.h  register.h
qt/Client/common/network/: networkbase.cpp
qt/Client/src/: ack.pb.cc  ack.pb.h  chat.cpp  client.cpp  client.h  client.ui  eventloop.h  login.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  msg.pb.cc  msg.pb.h  msgmanager.h  qnchatmessage.cpp  register.cpp  register.ui  server.cpp  server.h
qt/Client/test/: testClient.cpp
qt/Client/ui/: chat.ui  login.ui
server/: CMakeLists.txt  imserver  server.cpp  testClient.cpp  testMysql.cpp
server/adapter/: adapter.cpp  adapter.h  fileadapter.cpp  fileadapter.h  textadapter.cpp  textadapter.h
server/common/async/: buffer.cpp  buffer.h
server/common/network/: mysqlmanager.cpp  mysqlmanager.h  networkbase.cpp  networkbase.h
server/common/thread/: epoller.cpp  epoller.h  threadpool.cpp  threadpool.h
server/common/util/: util.cpp  util.h
server/src/: acceptor.cpp  acceptor.h  channel.cpp  channel.h  eventloop.cpp  eventloop.h  msgmanager.cpp  msgmanager.h  server.cpp  server.h
server/test/: testClient.cpp  testMysql.cpp
